# FEX

./: .gitmodules  CMakeLists.txt
FEXCore/Source/: CMakeLists.txt
FEXCore/Source/Common/: JitSymbols.cpp
FEXCore/Source/Interface/Context/: Context.h
FEXCore/Source/Interface/Core/: Core.cpp  LookupCache.h  OpcodeDispatcher.cpp  OpcodeDispatcher.h
FEXCore/Source/Interface/Core/ArchHelpers/: Arm64Emitter.cpp  Arm64Emitter.h
FEXCore/Source/Interface/Core/Dispatcher/: Dispatcher.cpp  Dispatcher.h
FEXCore/Source/Interface/Core/JIT/Arm64/: ALUOps.cpp  BranchOps.cpp  JIT.cpp  MemoryOps.cpp
FEXCore/Source/Interface/IR/Passes/: DeadContextStoreElimination.cpp
FEXCore/Source/Utils/: Threads.cpp
FEXCore/include/FEXCore/Core/: Context.h  CoreState.h  SignalDelegator.h
FEXCore/include/FEXCore/Utils/: AllocatorHooks.h  IntervalList.h
FEXCore/include/FEXCore/fextl/: fmt.h
FEXHeaderUtils/FEXHeaderUtils/: Filesystem.h
Source/Windows/: CMakeLists.txt
Source/Windows/ARM64EC/: BT64Interface.h  BTInterface.h  CMakeLists.txt  Module.S  Module.cpp  ModuleSRA.S  ModuleX86.S  libarm64ecfex.def
Source/Windows/Common/: CPUFeatures.cpp  InvalidationTracker.cpp  InvalidationTracker.h
Source/Windows/Defs/: kernelbase.def
Source/Windows/WOW64/: CMakeLists.txt  Module.cpp
Source/Windows/include/: winternl.h
unittests/InstructionCountCI/: PrimaryGroup.json  x87.json  x87_f64.json
unittests/InstructionCountCI/FEXOpt/: MultiInst.json
unittests/InstructionCountCI/FlagM/: HotBlocks_32Bit.json  PrimaryGroup.json  x87.json  x87_f64.json
